# chaplin

./: CMakeLists.txt  SetupConfig.cmake  genPrj.pl
src/chaplin/: CMakeLists.txt  CompilerFlags.cmake  WhiteList.cmake  cpn_algebraic_concepts.h  cpn_algebraic_defs.h  cpn_algebraic_functor.h  cpn_algebraic_structure.cpp  cpn_algebraic_structure.h  cpn_algebraic_structure.inl  cpn_builtin_expression_ops.h  cpn_builtin_expression_ops.inl  cpn_builtin_expressions.h  cpn_builtin_expressions.inl  cpn_builtin_function_ops.h  cpn_builtin_function_ops.inl  cpn_builtin_functions.h  cpn_builtin_functions.inl  cpn_builtin_math_functions.h  cpn_builtin_symbolic_literal_factory.h  cpn_builtin_symbolic_literal_factory.inl  cpn_builtin_symbolic_literal_ops.cpp  cpn_builtin_symbolic_literal_ops.h  cpn_builtin_symbolic_literal_ops.inl  cpn_builtin_symbolic_literals.cpp  cpn_builtin_symbolic_literals.h  cpn_builtin_symbolic_literals.inl  cpn_builtin_symbolic_number_factory.cpp  cpn_builtin_symbolic_number_factory.h  cpn_builtin_symbolic_number_factory.inl  cpn_builtin_symbolic_number_visitors.cpp  cpn_builtin_symbolic_number_visitors.h  cpn_builtin_symbolic_number_visitors.inl  cpn_builtin_symbolic_numbers.cpp  cpn_builtin_symbolic_numbers.h  cpn_complete_space.h  cpn_expression_concepts.h  cpn_expression_inspector.h  cpn_expression_inspector.inl  cpn_field.h  cpn_free_module.h  (+61 more)
test/chaplinTests/: CMakeLists.txt  cpn_builtin_expression_test.cpp  cpn_function_test.cpp  cpn_symbolic_literal_test.cpp  cpn_symbolic_number_test.cpp
win64/ddk/include/ddkFramework/: ddk_allocator_exceptions.h  ddk_function_impl.h  ddk_function_template_helper.h  (+3 more)
(+2 files in other folders)
